# CosyVoice

./: .envrc  .gitignore  INSTALL.md  download_models  install-gpu.sh  install.sh  pyproject.toml  requirements-gpu.txt  requirements-vllm.txt  voice_clone.py
