[project]
name = "cosyvoice"
version = "3.0.0"
description = "CosyVoice - Text-to-Speech Large Language Model"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "FunAudioLLM Team" }
]
keywords = ["tts", "speech-synthesis", "voice-cloning", "llm", "cosyvoice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# 核心依赖（所有平台通用）
dependencies = [
    "conformer==0.3.2",
    "diffusers==0.29.0",
    "fastapi==0.115.6",
    "fastapi-cli==0.0.4",
    "gdown==5.1.0",
    "gradio==5.4.0",
    "grpcio==1.57.0",
    "grpcio-tools==1.57.0",
    "hydra-core==1.3.2",
    "HyperPyYAML==1.2.2",
    "inflect==7.3.1",
    "librosa==0.10.2",
    "lightning==2.2.4",
    "matplotlib==3.7.5",
    "modelscope==1.20.0",
    "networkx==3.1",
    "omegaconf==2.3.0",
    "onnx==1.16.0",
    "openai-whisper==20231117",
    "protobuf==4.25",
    "pyarrow==18.1.0",
    "pydantic==2.7.0",
    "pyworld==0.3.4",
    "rich==13.7.1",
    "soundfile==0.12.1",
    "tensorboard==2.14.0",
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "transformers==4.51.3",
    "uvicorn==0.30.0",
    "wetext==0.0.4",
    "wget==3.2",
    # 平台特定依赖（使用环境标记自动选择）
    "onnxruntime==1.18.0; sys_platform == 'darwin' or sys_platform == 'win32'",
    "deepspeed==0.15.1; sys_platform == 'linux'",
]

[project.optional-dependencies]
# 开发工具（所有平台）
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

# 注意：GPU 相关依赖已移至独立配置文件
# - requirements-gpu.txt: Linux GPU 加速 (ONNX Runtime GPU + TensorRT)
# - requirements-vllm.txt: vLLM 加速推理
# 
# Linux GPU 服务器安装方法：
#   uv sync && uv pip install -r requirements-gpu.txt
# 或使用完整版（包含 vLLM）：
#   uv sync && uv pip install -r requirements-gpu.txt -r requirements-vllm.txt

[project.urls]
Homepage = "https://github.com/FunAudioLLM/CosyVoice"
Documentation = "https://github.com/FunAudioLLM/CosyVoice/blob/main/README.md"
Repository = "https://github.com/FunAudioLLM/CosyVoice"
Issues = "https://github.com/FunAudioLLM/CosyVoice/issues"

[project.scripts]
cosyvoice-webui = "webui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cosyvoice"]

[tool.uv]
# 基础配置：只使用 PyPI 默认索引
# GPU 相关的额外索引已移至 requirements-gpu.txt 中

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  
  | \.venv
  | build
  | dist
  | third_party
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
extend_skip_glob = ["third_party/*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "third_party/",
    "build/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

